--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -1,8 +1,27 @@
 @import '../global_styles/fonts';
 
-$primary-color: #FADCE5;
-
 .nav{
+    display: block;
+    float: left;
+    background-color: #FADCE5;
     padding: 1vw;
     font-family: $font-primary;
+    border-radius: 25px;
+    width: 10.4vw;
+    margin: 1vw 0px 0px 1vw;
+    min-height: 800px;
+    ul{
+        list-style: none;
+        padding: 0;
+        margin: 10px 0;
+        display: flex;
+        flex-direction: column;
+        li{
+            display: block;
+        }
+    }
+    .links{
+        text-decoration: none;
+        margin-bottom: 20px;
+    }
 }
