--- a/src/global_styles/global.scss
+++ b/src/global_styles/global.scss
@@ -5,5 +5,5 @@ body {
   font-weight: $font-weight-regular;
   margin: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: #F7F6F3;
 }
