adding color change for hovering over links

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -23,5 +23,9 @@
     .links{
         text-decoration: none;
         margin-bottom: 20px;
+        color: #333;
+        &:hover {
+            color: #666; // hover link color
+        }
     }
 }
