adding icons for new and all projects

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -10,6 +10,7 @@
     width: 10.4vw;
     margin: 1vw 0px 0px 1vw;
     min-height: 800px;
+    position: fixed;
     ul{
         list-style: none;
         padding: 0;
