--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -2,8 +2,8 @@
 
 .nav{
     display: block;
-    float: left;
     background-color: #FADCE5;
+    font-size: 1vw;
     padding: 1vw;
     font-family: $font-primary;
     border-radius: 25px;
@@ -11,22 +11,27 @@
     margin: 1vw 0px 0px 1vw;
     min-height: 800px;
     position: fixed;
+
     ul{
         list-style: none;
         padding: 0;
-        margin: 10px 0;
         display: flex;
         flex-direction: column;
-        li{
-            display: block;
-        }
     }
+
     .links{
+        display: flex;
+        align-items: center;
         text-decoration: none;
         margin-bottom: 20px;
-        color: #333;
+        color: #fff;
         &:hover {
-            color: #666; // hover link color
+            color: #ccc; // hover link color
         }
     }
+    .icon {
+        width: 40px; // adjust the size as needed
+        height: 40px; // adjust the size as needed
+        margin-right: 10px; // add some space between the icon and the text
+      }
 }
