--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -10,7 +10,7 @@
     width: 10.4vw;
     margin: 1vw 0px 0px 1vw;
     min-height: 800px;
-    position: fixed;
+    //position: fixed;
 
     ul{
         list-style: none;
