added overlay function

--- a/src/components/NewPiece.module.scss
+++ b/src/components/NewPiece.module.scss
@@ -63,3 +63,14 @@
     color: #ffff;
   }
 }
+.overlay {
+  position: fixed; // or absolute if you want it relative to a parent
+  inset: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.4); // semi-transparent background
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; // make sure it's above other content
+}
