--- a/src/pages_styling/NewProject.module.scss
+++ b/src/pages_styling/NewProject.module.scss
@@ -77,6 +77,7 @@
   box-shadow: 0 4px 16px 0 #eadde5;
   width: 140px;
   text-align: left;
+  position: relative; // if you use absolute positioning inside
 
 }
 .pieces_container{
@@ -97,6 +98,22 @@
     margin: 12px 8px;
     cursor: pointer;
   }
+}
+
+.fab{
+  margin-left: auto;
+  position: absolute;
+  cursor: pointer;
+  right: -12px;
+  bottom: -8px;
+  border: none;
+  text-align: center;
+  border-radius: 50%;
+  width: 25%;
+  aspect-ratio: 1;
+  background-color: #a7b797;
+  font-weight: bold;
+  box-shadow: 0 4px 4px 0 #818e75;
 }
 
 
