rounds completion function works

--- a/src/global_styles/fonts.scss
+++ b/src/global_styles/fonts.scss
@@ -4,3 +4,5 @@ $font-primary: 'KoHo', sans-serif;
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-bold: 700;
+
+//make sure to import nunito when you go home
