--- a/src/pages_styling/ProjectDetails.module.scss
+++ b/src/pages_styling/ProjectDetails.module.scss
@@ -13,6 +13,11 @@
         font-weight: bold;
         font-size: 2vw;
     }
+    h3{
+        text-align: left;
+        font-weight: bolds;
+        font-size: 1.8vw;
+    }
 }
 .round_text{
     text-align: left;
