--- a/src/pages_styling/ProjectDetails.module.scss
+++ b/src/pages_styling/ProjectDetails.module.scss
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 .rounds_unclicked{
     border-radius: 50%;
