pushing in case bc this works right now

--- a/src/pages_styling/ProjectDetails.module.scss
+++ b/src/pages_styling/ProjectDetails.module.scss
@@ -18,6 +18,17 @@
         font-weight: bolds;
         font-size: 1.8vw;
     }
+    ul{
+        font-size: 1vw;
+    }
+    li{
+        text-align: left;
+    }
+    img{
+        width: 20%;
+        border-radius: 5%
+    }
+
 }
 .round_text{
     text-align: left;
