changed color of NavBar to darker pink and changed location of the welcome message and logout button

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -2,7 +2,7 @@
 
 .nav{
     display: block;
-    background-color: #FADCE5;
+    background-color: #f4ced9;
     font-size: 1vw;
     padding: 1vw;
     font-family: $font-primary;
