got rid of error where the error message would always pop up when toggling between the login and sign up form

--- a/src/components/ProjectsPage.module.scss
+++ b/src/components/ProjectsPage.module.scss
@@ -24,5 +24,8 @@
         font-weight: inherit;
         line-height: inherit;
         padding: 0;
+        &:hover{
+            color: #8c8b8b
+        }
   }
 }
