--- a/src/pages_styling/AllProjects.module.scss
+++ b/src/pages_styling/AllProjects.module.scss
@@ -7,3 +7,12 @@
 .project_wrapper{
     display: contents;
 }
+.no_projects{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  min-height: 40vh; // Adjust as needed for vertical centering
+}
