--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -1,7 +1,7 @@
 .project {
   background: white;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   padding: 13px;
   max-width: 300px;
   margin: 6px;
@@ -10,10 +10,10 @@
   //align-items: center;
 
   img {
-    width: 300px;          // Fixed width
-    height: 300px;         // Fixed height
-    border-radius: 4px;    // Optional rounded corners
-    object-fit: cover;     // Crop and fill the image area
+    width: 300px; // Fixed width
+    height: 300px; // Fixed height
+    border-radius: 4px; // Optional rounded corners
+    object-fit: cover; // Crop and fill the image area
   }
 }
 .toggleButton {
@@ -24,15 +24,15 @@
   border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
-    &:hover{
-        color: #777373
-    }
+  &:hover {
+    color: #777373;
+  }
 }
 .projectName {
-    font-size: 1vw;
-    align-items: center;
+  font-size: 1vw;
+  align-items: center;
 }
-.project_details{
+.project_details {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
