--- a/src/components/ProjectsPage.module.scss
+++ b/src/components/ProjectsPage.module.scss
@@ -12,17 +12,17 @@
     font-weight: 500;
   }
   button {
-        cursor: pointer;
-        background-color: transparent;
-        border-width: 0;
-        font-family: inherit;
-        font-size: inherit;
-        font-style: inherit;
-        font-weight: inherit;
-        line-height: inherit;
-        padding: 0;
-        &:hover{
-            color: #8c8b8b
-        }
+    cursor: pointer;
+    background-color: transparent;
+    border-width: 0;
+    font-family: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    padding: 0;
+    &:hover {
+      color: #8c8b8b;
+    }
   }
 }
