getting rid of the add piece button since there's already the fab (which will be changed later)

--- a/src/pages_styling/NewProject.module.scss
+++ b/src/pages_styling/NewProject.module.scss
@@ -151,8 +151,7 @@
   box-sizing: border-box;
   padding: 12px;
   margin-top: 10px;
-  // background: #E6F2F5;
-  background: transparent;
+  background: #E6F2F5;
   border-color: #e6f2f5;
   color: #575355;
   font-size: 1.1rem;
