Font (KoHo) wasn't applying to the rounds for some reason so I just added it to the scss sheet as well

--- a/src/pages_styling/ProjectDetails.module.scss
+++ b/src/pages_styling/ProjectDetails.module.scss
@@ -60,6 +60,7 @@
   cursor: pointer;
   background-color: transparent;
   font-size: 1vw;
+  font-family: 'KoHo';
 
   &:hover {
     background-color: #dfebf4;
